# AlphaGBMskills

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  alphagbm_run_ex.md  requirements.txt
cli/: README.md  pyproject.toml
cli/alphagbm_cli/: __init__.py  client.py  config.py  display.py  main.py
cli/docs/: CLI_USAGE.md
mock-data/: AAPL.json  META.json  NVDA.json  SPY.json  TSLA.json
scripts/: compare_stocks.py  config.py  stock_analysis.py  take_profit.py
skills/: README_CN.md
skills/alphagbm-alert/: SKILL.md
skills/alphagbm-company-profile/: SKILL.md
skills/alphagbm-compare/: SKILL.md
skills/alphagbm-earnings-crush/: SKILL.md
skills/alphagbm-greeks/: SKILL.md
skills/alphagbm-health-check/: SKILL.md
skills/alphagbm-investment-thesis/: SKILL.md
skills/alphagbm-iv-rank/: SKILL.md
skills/alphagbm-macro-view/: SKILL.md
skills/alphagbm-market-sentiment/: SKILL.md
skills/alphagbm-options-score/: SKILL.md
skills/alphagbm-options-strategy/: SKILL.md
skills/alphagbm-pnl-simulator/: SKILL.md
skills/alphagbm-polymarket/: SKILL.md
skills/alphagbm-stock-analysis/: SKILL.md
skills/alphagbm-theme-research/: SKILL.md
skills/alphagbm-unusual-activity/: SKILL.md
skills/alphagbm-vol-smile/: SKILL.md
skills/alphagbm-vol-surface/: SKILL.md
skills/alphagbm-watchlist/: SKILL.md
skills_cn/alphagbm-alert/: SKILL.md
skills_cn/alphagbm-bps-backtest/: SKILL.md
skills_cn/alphagbm-company-profile/: SKILL.md
skills_cn/alphagbm-compare/: SKILL.md
skills_cn/alphagbm-duan-analysis/: SKILL.md
stock/: stock.md  tushare_ex.md
(+24 files in other folders)
